# Hackscript-pro-lang

./: .gitignore  Cargo.toml  Dockerfile  Hackinterpreter.py  Hacklexer.py  Hackparser.py  LICENSE  README  README.md  RULES_HACKSCRIPT.md  \  grammar.txt  hackscript.py  ins_def.py  main_hackscript.py
chadlang/: Cargo.toml
chadlang/src/: lib.rs
error/: error.py  error_message.py
extra/: tutorial.md
hacktypes/: datatypes.py  impor_type.py
plans/: !preface.md  hackcode.md  scope.md  variable_declaration.md
python_library/better_hackscript/: main.py
python_library/better_list/: main.py
python_library/better_string/: main.py
python_library/hack_app/: main.py
python_library/math/: main.py
python_library/ope_sys/: main.py
python_library/os/: main.py
src/: hackscript.c  hacktypes.rs  interpreter.rs  lib.rs  main.rs  position.rs  run.rs  settings.json  test.json
src/ast/: Cargo.toml  mod.rs
src/ast_implementation/: ast.rs  lexer.rs  parser.rs
src/chadlang/: logger.rs  mod.rs
src/cpputils/: input.cpp
src/error_handling/: Cargo.toml  error_typing.rs  mod.rs
src/hacktypes/: Cargo.toml
src/include/: input.h
src/interpreter/: Cargo.toml  mod.rs
src/interpreter/src/: lib.rs
src/lexer/: Cargo.toml  mod.rs
src/nodes/: Cargo.toml
src/parser/: Cargo.toml  ast.rs  lexer.rs  mod.rs  parser.rs
src/value/: Cargo.toml  array.rs  boolean.rs  mod.rs  null.rs  number.rs  set.rs  string.rs  tuple.rs  value_trait.rs
tests/: arithmetic_equation.rs  array.rs  comparison.rs  main_test.rs  random_text.rs  set.rs  string.rs  tuple.rs
(+27 files in other folders)
