[package]
name = "interpreter"
version = "0.1.0"
edition = "2021"

[dependencies]
value = {path = "../value"}
lexer = {path = "../lexer"}
parser = {path = "../parser"}
ast = {path = "../ast"}
error_handling = {path = "../error_handling" }
position = { path = "../position"}
hacktypes = {path = "../hacktypes/"}
